tests/error/misc_errors/return_flag.py
from guppylang.decorator import guppy
from guppylang.std.builtins import owned
from guppylang.std.quantum import qubit


@guppy.declare
def foo() -> qubit @owned: ...


foo.compile()
