tests/error/misc_errors/return_flag.err
Error: Invalid annotation (at $FILE:7:13)
  | 
5 | 
6 | @guppy.declare
7 | def foo() -> qubit @owned: ...
  |              ^^^^^^^^^^^^ `@` type annotations are not allowed in this position

Guppy compilation failed due to 1 previous error
